# ra

./: Cargo.toml  README.md  fhirpath.abnf  search-filter.abnf
src/: api.rs  barn.rs  bson_utils.rs  config.rs  context.rs  dtypes.rs  errors.rs  filter_parser.rs  filter_scanner.rs  lib.rs  main.rs  parser.rs  rapath.rs  res_schema.rs  scanner.rs  search.rs  test_utils.rs  utils.rs  validator.rs
src/api/: base.rs  bundle.rs  capability.rs  rest.rs
src/barn/: index_scanners.rs  insert.rs
src/barn/index_scanners/: string.rs
src/rapath/: element_utils.rs  engine.rs  expr.rs  functions.rs  parser.rs  scanner.rs  stypes.rs
src/rapath/functions/: add.rs  array_index.rs  cast_as.rs  empty.rs  exists.rs  fn_template.rs_  gt.rs  resolve_and_check.rs  union.rs  where_.rs
src/search/: executor.rs  filter_converter.rs  filter_parser.rs  filter_scanner.rs  index_scanners.rs
src/search/index_scanners/: and_or.rs  not.rs  reference.rs  string.rs  token.rs
src/utils/: bson_utils.rs  norm_utils.rs  resources.rs  test_utils.rs  validator.rs
test_data/resources/: bundle-example.json  chained-search-bundle.json  patient-example.json
tests/: search_tests.rs
