[package]
name = "ra"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ra_registry"

[dependencies]
jsonschema = "0.13.3"
serde_json = "1.0.78"
serde = { version = "1.0.135", features = ["derive"] }
thiserror = "1.0.30"
anyhow = "1.0.53"
ksuid = {path = "../ksuid"}
crc32fast = "1.3.1"
log4rs = {version = "1.0.0", features = ["pattern_encoder"]}
log = "0.4.14"
log-mdc = "0.1.0"
rocksdb = "0.17.0"
#rawbson = "0.2.1"
rawbson = {path = "../rawbson"}
#bson = "1.2.2" # TODO update to latest version
bson = {path = "../bson-rust", features = ["u2i"]} # TODO forked for accessing internal serde module
chrono = "0.4.19"
lazy_static = "1.4.0"
zip = {version = "0.5.13", features=["bzip2"]}
rocket = {version = "0.5.0-rc.1", features = ["json"]}
bzip2-rs = "0.1.2"
uuid = {version = "0.8.2", features = ["v4"]}
clap = "3.0.14"